# big-five-test

./: README.md  big-five-test.cabal  flake.nix  hie.yaml
res/: big5test.txt
src/: Main.hs  Parser.hs  Types.hs
src/Utils/: Types.hs  Utils.hs
