cabal-version:   2.4
name:            big-five-test
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     Bellroy take home test
author:          José María Landa Chávez
maintainer:      José María Landa Chávez - josemaria.landa@gmail.com
copyright:       2023-03-24 José María Landa Chávez
build-type:      Simple
extra-doc-files: 
  README.md
license:         Unlicense
license-file:    LICENSE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      TypeOperators,
                      ScopedTypeVariables,
                      TypeApplications,
                      RecordWildCards,
                      OverloadedStrings,
                      PolyKinds
  ghc-options:

executable big-five-test-exe
  import:         common-options
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  aeson
                , regex-tdfa
                , split
                , text
                , HList
                , first-class-families
                  
